tests/baselines/reference/parserInvocationOfMemberAccessOffOfObjectCreationExpression1.errors.txt
==== tests/cases/compiler/parserInvocationOfMemberAccessOffOfObjectCreationExpression1.ts (1 errors) ====
    new A().b()
        ~
!!! parserInvocationOfMemberAccessOffOfObjectCreationExpression1.ts(1,5): error TS2095: Cannot find name 'A'.